<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/holo_gray"
    android:padding="12dp"
    tools:context=".Fragments.MenuFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSource"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ly_data"
            android:drawablePadding="12dp"
            android:padding="12dp"
            android:text="@string/menu_source"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvConfig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ly_config"
            android:drawablePadding="12dp"
            android:padding="12dp"
            android:text="@string/menu_config"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ly_info"
            android:drawablePadding="12dp"
            android:padding="12dp"
            android:text="@string/menu_about"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ly_logout"
            android:drawablePadding="12dp"
            android:padding="12dp"
            android:text="@string/menu_logout"
            android:textColor="@color/white"
            android:textSize="18sp" />


    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>